--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,10 @@
     </head>
     <body>
         <h1>Chatty Bot</h1>
+        <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">What would you like to say to Chatty Bot today?</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="2"></textarea>
+          </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
