--- a/templates/home.html
+++ b/templates/home.html
@@ -4,11 +4,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Chatty Bot</title>
+        <title>SynthoChat</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
-        <h1>Chatty Bot</h1>
+        <h1>SynthoChat</h1>
         <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label">What would you like to say to Chatty Bot today?</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="2"></textarea>
